--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,15 @@
 {% endblock %}
 
 {% block body %}
+
+<!--Class Table -->
 <main role="main" class="inner cover">
     <h1 class="cover-heading">Classes</h1>
     <table class="table table-dark">
         <thead>
+
             <th class="text-start">Class Name</th>
             <th class="text-end">Hours Spent</th>
-            
         </thead>
         <tbody>
             {% for data in tabledata %}
@@ -19,37 +21,40 @@
                     <td class="text-start" name="classname" id="classname">{{ data[0] }}</td>
                     <td class="text-end">{{ data[1] }}</td>
                 </tr>
-            {% endfor %}
-            
+            {% endfor %} 
         </tbody>
     </table>
 </main>
-<div>
-    <form action="/" method="post">
-        <div class="form-group">
-          <label for="classname">Add Class</label>
-          <input type="text" class="form-control" id="classname" name="classname" placeholder="Class Name">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    <div class="mb-3">
+
+<div class="row" style="margin-top:20px;">
+    <div class="col-md-6" class="w-50 p-3">
+        <!--Add Class -->
+        <form action="/" method="post">
+            <div class="form-group">
+                <label for="classname">Add Class</label>
+                <input type="text" class="form-control form-control-lg" id="classname" name="classname" placeholder="Class Name">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+
+    <div class="col-md-6" class="w-50 p-3">
+        <!--Delete Class -->
         <form action="/delete" method="post">
             <div class="form-group">
-            <label for="classname">Delete Class</label>
-            <div>
-                <select class="form-select mx-auto w-auto" id="class" name="class">
-                    <!--Dropdown for classes -->
-                    <option disabled selected>Class</option>
-                    {% for class in classes %}
-        
-                        <option value="{{ class }}"> {{ class }} </option>
-        
-                    {% endfor %}
-                </select>
+                <label for="classname">Delete Class</label>
+                <div>
+                    <select class="btn btn-secondary btn-lg dropdown-toggle" id="class" name="class">
+                        <option disabled selected>Select Class</option>
+                            {% for class in classes %}
+                
+                                <option value="{{ class }}"> {{ class }} </option>
+                
+                            {% endfor %}
+                    </select>
+                </div>
             </div>
-
-            </div>
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <button type="submit" id="confirmation" class="btn btn-danger">Delete</button>
         </form>
     </div>
 </div>
