--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,10 +14,6 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/cover.css" rel="stylesheet">
-
-    <!--Chart generator-->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-
   </head>
 
   <body class="text-center">
@@ -28,11 +24,11 @@
         {% if session["user_id"] %}
           <h3 class="masthead-brand">Nomework</h3>
         {% else %}
-          <h3><a class="masthead-brand" href="/home">Nomework</a></h3>
+          <h3><a class='masthead-brand' href="/home">Nomework</a></h3>
         {% endif %}
           <nav class="nav nav-masthead justify-content-center">
           {% if session["user_id"] %}
-              <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/">Home</a>
               <a class="nav-link" href="/timer">Timer</a>
               <a class="nav-link" href="/analytics">Analytics</a>
               <a class="nav-link" href="/logout">Logout</a>
