--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
         {% if session["user_id"] %}
           <h3 class="masthead-brand">Nomework</h3>
         {% else %}
-          <h3><a class='masthead-brand' href="/home">Nomework</a></h3>
+          <h3><a class="masthead-brand" href="/home">Nomework</a></h3>
         {% endif %}
           <nav class="nav nav-masthead justify-content-center">
           {% if session["user_id"] %}
